--- a/templates/sidebarWholeseller.html
+++ b/templates/sidebarWholeseller.html
@@ -23,6 +23,28 @@
                   ><span class="hide-menu">Data Migration</span></span></a
                 >
               </li>
+
+
+              <li class="sidebar-item">
+                <a
+                  class="sidebar-link waves-effect waves-dark sidebar-link"
+                  href="/withDeclaration"
+                  aria-expanded="false"
+                  ><i class="mdi mdi-table"></i
+                  ><span class="hide-menu" style="white-space: normal;">Customer List (With Declaration)</span></span></a
+                >
+              </li>
+
+
+              <li class="sidebar-item">
+                <a
+                  class="sidebar-link waves-effect waves-dark sidebar-link"
+                  href="/withoutDeclaration"
+                  aria-expanded="false"
+                  ><i class="mdi mdi-table"></i
+                  ><span class="hide-menu" style="white-space: normal;">Customer List (Without Declaration)</span></span></a
+                >
+              </li>
               
             </ul>
           </nav>
