--- a/templates/withDeclaration.html
+++ b/templates/withDeclaration.html
@@ -166,24 +166,7 @@
 
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="card-title" style="margin-bottom: 20px;">Data Migration</h2>
-
-                        <form method="POST" enctype="multipart/form-data" action="/uploadMigration">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h4 class="card-title">Upload</h4>
-                                    <hr>
-
-                                    <div class="custom-file mb-3">
-                                        <input type="file" class="custom-file-input" id="uploadFile" name="file">
-                                    </div>
-
-                                    <div class="d-flex justify-content-between">
-                                        <button type="submit" class="btn btn-primary" id="uploadButton">Upload</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
+                        <h2 class="card-title" style="margin-bottom: 20px;">Customer List (With Declaration)</h2>
 
                         <div class="card">
                             <div class="card-body">
