--- a/templates/withDeclaration.html
+++ b/templates/withDeclaration.html
@@ -173,7 +173,7 @@
                                 <h4 class="card-title">Customer List</h4>
                                 <hr>
                                 <div class="table-responsive">
-                                    <table id="customerList" class="table mt-3" style="width: 100%">
+                                    <table id="wdList" class="table mt-3" style="width: 100%">
                                         <thead>
                                             <tr>
                                                 <th class="col-3">Phone Number</th>
@@ -259,7 +259,7 @@
         <script src="/static/assets/extra-libs/datatables.net/js/jquery.dataTables.min.js"></script>
         <script src="/static/assets/extra-libs/datatables.net-bs4/js/dataTables.responsive.min.js"></script>
         <script>
-            $("#customerList").DataTable({
+            $("#wdList").DataTable({
                 order: [[4, 'desc']],
             });
         </script>
