--- a/templates/dataMigration.html
+++ b/templates/dataMigration.html
@@ -187,10 +187,10 @@
 
                         <div class="card">
                             <div class="card-body">
-                                <h4 class="card-title">Customer List</h4>
+                                <h4 class="card-title">Today's Customer List</h4>
                                 <hr>
                                 <div class="table-responsive">
-                                    <table id="customerList" class="table mt-3" style="width: 100%">
+                                    <table id="dmList" class="table mt-3" style="width: 100%">
                                         <thead>
                                             <tr>
                                                 <th class="col-3">Phone Number</th>
@@ -292,7 +292,7 @@
         <script src="/static/assets/extra-libs/datatables.net/js/jquery.dataTables.min.js"></script>
         <script src="/static/assets/extra-libs/datatables.net-bs4/js/dataTables.responsive.min.js"></script>
         <script>
-            $("#customerList").DataTable({
+            $("#dmList").DataTable({
                 order: [[4, 'desc']],
             });
         </script>
