--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -26,6 +26,16 @@
               <li class="sidebar-item">
                 <a
                   class="sidebar-link waves-effect waves-dark sidebar-link"
+                  href="/companyList"
+                  aria-expanded="false"
+                  ><i class="mdi mdi-table"></i
+                  ><span class="hide-menu">Company List</span></span></a
+                >
+              </li>
+
+              <li class="sidebar-item">
+                <a
+                  class="sidebar-link waves-effect waves-dark sidebar-link"
                   href="/createAccount"
                   aria-expanded="false"
                   ><i class="mdi mdi-table"></i
